# botecopro-db-meta

./: .gitignore  001_domain.sql  AGENTS.md  PLAN.md  README.md  generator.py  propose_corrections.md  pyproject.toml  requirements.txt  specifications.md
PLAN/: 002_domain.yaml  DOMAIN
db-meta/: config.yaml  enums.yaml  relations.yaml
db-meta/schema/: 001_domain.yaml
db-meta/schemas/: auth.permissions.yaml  auth.role_permissions.yaml  auth.roles.yaml  auth.sessions.yaml  auth.users.yaml  business.business_members.yaml  business.businesses.yaml  inventory.purchase_orders.yaml  inventory.stock_movements.yaml  inventory.suppliers.yaml  products.categories.yaml  products.product_stock.yaml  products.product_variants.yaml  products.products.yaml  sales.order_items.yaml  sales.orders.yaml  sales.payments.yaml  sales.receipts.yaml  sessions.audit_logs.yaml  sessions.device_sessions.yaml  sessions.offline_sync_queue.yaml  settings.app_settings.yaml  settings.feature_flags.yaml
domain/: controllers.yaml  models.yaml  views.yaml
output/: 001_domain.yaml  README.md
src/botecopro_meta/: __init__.py  generator.py
src/botecopro_meta/templates/: python_base.j2  python_enums.j2  python_init.j2  python_model.j2  sqlite_table.j2
templates/: dart_model.j2  postgres_table.j2  python_sqlalchemy.j2  python_sqlmodel.j2  sqlite_model.j2  sqlite_table.j2
tests/: conftest.py  test_generator.py
