[project]
name = "botecopro-meta"
version = "0.1.0"
description = "BotecoPro domain code generator for Python and SQLite"
authors = [{name = "BotecoPro", email = "dev@botecopro.local"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "flake8>=6.0"]

[project.scripts]
boteco-generate = "botecopro_meta.generator:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
